--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               <div class="header-popup cart-popup">
                 <ul>
                   <li class="cart-item">
-                    <span class="cart-product-delete">Удалить</span>
+                    <a href="delete-product.html" class="cart-product-delete">Удалить</a>
                     <a href="#product" class="cart-product-title a-bg">
                       <img src="img/products/cart-product_01.png" width="33" height="33" alt="product photo">
                       <span>Пломбир с апельсиновым джемом</span>
@@ -191,7 +191,7 @@
                 <h1 class="product-box-title">
                   <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
                 </h1>
-                <a href="#" class="btn btn-small">Быстрый просмотр</a>
+                <a href="product.html" class="btn btn-small" onclick="product_preview(event);">Быстрый просмотр</a>
               </div>
             </article>
             <article class="product-box-wrapper">
@@ -207,7 +207,7 @@
                 <h1 class="product-box-title">
                   <a href="#">Сливочно-кофейное с кусочками шоколада</a>
                 </h1>
-                <a href="#" class="btn btn-small">Быстрый просмотр</a>
+                <a href="product.html" class="btn btn-small" onclick="product_preview(event);">Быстрый просмотр</a>
               </div>
             </article>
             <article class="product-box-wrapper">
@@ -223,7 +223,7 @@
                 <h1 class="product-box-title">
                   <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
                 </h1>
-                <a href="#" class="btn btn-small">Быстрый просмотр</a>
+                <a href="product.html" class="btn btn-small" onclick="product_preview(event);">Быстрый просмотр</a>
               </div>
             </article>
             <article class="product-box-wrapper">
@@ -239,7 +239,7 @@
                 <h1 class="product-box-title">
                   <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
                 </h1>
-                <a href="#" class="btn btn-small">Быстрый просмотр</a>
+                <a href="product.html" class="btn btn-small" onclick="product_preview(event);">Быстрый просмотр</a>
               </div>
             </article>
           </section>
@@ -303,7 +303,7 @@
                 </strong><br>
                 (с 10 до 20 ежедневно)
               </p>
-              <a href="#" class="btn show-feedback-modal">Форма обратной связи</a>
+              <a href="feedback.html" class="btn show-feedback-modal">Форма обратной связи</a>
             </div>
           </div>
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6008858503708!2d30.32293845969631!3d59.938764622902696!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1454332314282" width="100%" height="430" frameborder="0" style="border:0" allowfullscreen></iframe>
